<resources>
    <string name="app_name">iOOi</string>
    <string name="social_font_bold">socialfonts/googlesansebold.ttf</string>
    <string name="social_font_medium">socialfonts/googlesansmedium.ttf</string>
    <string name="social_font_regular">socialfonts/googlesansregular.ttf</string>
    <string name="social_lbl_friends">Friends</string>
    <string name="social_lbl_see_more">See more</string>
    <string name="social_lbl_welcome">Welcome</string>
    <string name="social_lbl_welcome_info">Enter your phone number to continue to inMood Messenger and enjoy messaging and calling to all your friend</string>
    <string name="social_name">Matloob Mehrab</string>
    <string name="social_setting_lbl_">Isn\'t it strange that we talk least about</string>
    <string name="social_lbl_account">Account</string>
    <string name="social_lbl_account_info">Privacy, security, change number</string>
    <string name="social_lbl_chats">Chats</string>
    <string name="social_lbl_chats_info">Backup, history, wallpaper</string>
    <string name="social_lbl_data_and_storage_usage">Data and storage usage</string>
    <string name="social_lbl_data_info">Network usage, auto download</string>
    <string name="social_lbl_notifications">Notifications</string>
    <string name="social_lbl_new_group">New Group</string>
    <string name="social_lbl_notification_info"><![CDATA[Message, group & call tones]]></string>
    <string name="social_lbl_help">Help</string>
    <string name="social_lbl_help_info">FAQ, contact us, privacy policy</string>
    <string name="social_lbl_invite_friends">Invite Friends</string>
    <string name="social_lbl_invite_friends_info">Invite new friends and earn</string>
    <string name="social_lbl_privacy">Privacy</string>
    <string name="social_lbl_privacy_info"><![CDATA[Message & status privacy]]></string>
    <string name="social_lbl_security">Security</string>
    <string name="social_lbl_security_info"><![CDATA[Message & call encryption]]></string>
    <string name="social_lbl_two_step_verification">Two step verification</string>
    <string name="social_lbl_verification_info">Enable two-step verification</string>
    <string name="social_lbl_change_number">Change Number</string>
    <string name="social_lbl_change_number_info">Change your phone number</string>
    <string name="social_lbl_request_info">Request info</string>
    <string name="social_lbl_request_info_">Request a report of your account</string>
    <string name="social_lbl_delete_account">Delete Account</string>
    <string name="social_lbl_delete_account_info">Deactivate my account</string>
    <string name="social_lbl_message_notification">Message Notifications</string>
    <string name="social_lbl_notification_tone">Notification Tone</string>
    <string name="social_lbl_default_ringtone">Default ringtone</string>
    <string name="social_lbl_vibrate">Vibrate</string>
    <string name="social_lbl_default_vibration">Default Vibration</string>
    <string name="social_lbl_popup_notification">Popup Notification</string>
    <string name="social_lbl_only_show_when_screen_is_on">Only show when screen is ON</string>
    <string name="social_lbl_light">Light</string>
    <string name="social_lbl_white">White</string>
    <string name="social_lbl_use_high_priority_notifications">Use high priority notifications</string>
    <string name="social_lbl_show_preview_of_notifications_at_the_top_of_the_screen">Show preview of notifications at the top of the screen</string>
    <string name="social_lbl_ringtone">Ringtone</string>
    <string name="social_email">Matloobmehrab@gmail.com</string>
    <string name="social_phone">+91 11000287</string>
    <string name="social_info_this_is_not_your_username_or_pin_this_name_be_visible_to_your_whatsapp_contacts">This is not your username or pin. This name be visible to your WhatsApp contacts.</string>
    <string name="social_lbl_groups">Groups</string>
    <string name="social_lbl_my_status">My Status</string>
    <string name="social_lbl_tap_to_add_status">Tap to add status</string>
    <string name="social_7_30_pm">7:30 PM</string>
    <string name="social_lbl_status">Status</string>
    <string name="social_lbl_calls">Calls</string>
    <string name="social_hint_mobile_number">Mobile Number</string>
    <string name="social_hint_add_peole">Add People</string>
    <string name="social_lbl_continue">Continue</string>
    <string name="social_lbl_your_form_submission_is_subjected_n_to_our_privacy_and_policy">Your form submission is subjected \n to our Privacy and Policy</string>
    <string name="social_lbl_agree_continue"><![CDATA[Agree & Continue]]></string>
    <string name="social_lbl_welcome_to_inmood">Welcome to INMOOD</string>
    <string name="social_lbl_enter_in_send">Enter in send</string>
    <string name="social_lbl_enter_key_will_send_your_message">Enter key will send your message</string>
    <string name="social_lbl_show_newly_downloaded_media_in_your_phone_s_gallery">Show newly downloaded media in your phone\'s gallery</string>
    <string name="social_lbl_app_languages">App Languages</string>
    <string name="social_lbl_phone_languages_english">Phone languages (English)</string>
    <string name="social_lbl_font_size">Font Size</string>
    <string name="social_lbl_medium_fonts">Medium Fonts</string>
    <string name="social_lbl_chat_backup">Chat Backup</string>
    <string name="social_lbl_view_backup_history_settings"><![CDATA[View backup history & settings]]></string>
    <string name="social_lbl_chat_history">Chat History</string>
    <string name="social_lbl_share_and_download_history">Share and download history</string>
    <string name="social_lbl_skip">Skip</string>
    <string name="social_lbl_next">Next</string>
    <string name="social_lbl_hold_on">Hold on!</string>
    <string name="social_lbl_media">Media</string>
    <string name="social_lbl_mute_notifications">Mute Notifications</string>
    <string name="social_lbl_custom_notifications">Custom Notifications</string>
    <string name="social_lbl_media_visibility">Media Visibility</string>
    <string name="social_lbl_encryption">Encryption</string>
    <string name="social_lbl_encryption_info">Message to this chat and calls are secured with end-to-end encryption. \nTap to verify</string>
    <string name="social_lbl_about_and_phone_number">About and phone number</string>
    <string name="social_lbl_hy_there_i_am_using_inmood">Hy there! I am using InMood</string>
    <string name="social_lbl__11_december_2019">11 December 2019</string>
    <string name="social_welcome_info">Read our Privacy Policy. Tap Agree and Continue to accept the Terms of Services.</string>
    <string name="social_lbl_settings">Settings</string>
    <string name="social_lbl_profile">Profile</string>
    <string name="social_lbl_block_user">Block user</string>
    <string name="social_lbl_unfriend">Unfriend</string>
    <string name="social_lbl_report_user">Report user</string>
    <string name="social_lbl_change_phone">Change Phone</string>
    <string name="social_lbl_please_enter_your_old_and_new_phone_numbers_below">Please enter your old and new phone \nnumbers below</string>
    <string name="social_lbl_old_phone_number">Old phone number</string>
    <string name="social_lbl_new_phone_number">New phone number</string>
    <string name="social_lbl_country">Country</string>
    <string name="social_lbl_to_delete_your_account_confirm_your_country_code_and_enter_your_phone_number">To delete your account, confirm your country code and enter your phone number</string>
    <string name="social_lbl_change_phone_number_instead">Change phone number instead!</string>
    <string name="social_lbl_delete4">Delete your google drive backup</string>
    <string name="social_lbl_delete3">Delete you from all of your inMood group</string>
    <string name="social_lbl_delete2">Erase your message history</string>
    <string name="social_lbl_delete1">Delete your account from inMood</string>
    <string name="social_lbl_deleting_your_account_will">Deleting your account will:</string>
    <string name="social_sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="social_sample_long_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="social_hold_info">Before we start, remember that you can never cross the ocean until you have the courage to loss sight of the share.</string>
    <string name="social_lbl_tutorial">Tutorial</string>
    <string name="social_lbl_are_you_sure">Are you sure?</string>
    <string name="social_lbl_yes">Yes</string>
    <string name="social_lbl_may_be">May be</string>
    <string name="social_lbl_cancel">Cancel</string>
    <string name="social_lbl_scan_qr_code">Scan QR Code</string>
    <string name="social_lbl_block_matloob">Block Matloob?</string>
    <string name="social_lbl_type_a_message">Type a message</string>
    <string name="social_lbl_today_8_00_pm">Today 8:00 PM</string>
    <string name="social_app_name">Inmood</string>
    <string name="social_lbl_verify_security_code">Verify security code</string>
    <string name="social_lbl_use_custom_notification">Use Custom Notification</string>
    <string name="social_lbl_wallpaper">Wallpaper</string>
    <string name="social_lbl_select_chat_background_wallpaper">Select chat background wallpaper</string>
    <string name="social_reset_settings">Reset settings</string>
    <string name="social_lbl_share">Share</string>
    <string name="social_lbl_edit_name">Edit name</string>
    <string name="social_lbl_edit_phone">Edit phone</string>
    <string name="social_lbl_hint_phone">Please input phone number</string>
    <string name="social_lbl_edit_email">Edit email</string>
    <string name="social_lbl_edit_address">Edit Address</string>
    <string name="social_lbl_edit_bio">Edit Bio</string>
    <string name="social_lbl_edit_password">Edit Password</string>
    <string name="social_lbl_edit">Edit</string>
    <string name="social_lbl_view_in_address_book">View in address book</string>
    <string name="social_txt_account">Account</string>
    <string name="social_txt_username">Username</string>
    <string name="social_txt_hint_full_name">Tab to change name</string>
    <string name="social_txt_edit_name">Edit Name</string>
    <string name="social_txt_bi0">Bio</string>
    <string name="social_txt_add_email">Tab to change email</string>
    <string name="social_txt_add_bio">Tab to change bio</string>
    <string name="social_txt_change_password">Tab to change password</string>
    <string name="social_txt_change_address">Tab to change address</string>
    <string name="social_txt_tab_change_phone">Tab to change phone number</string>
    <string name="social_txt_setting">Settigns</string>
    <string name="social_full_name">Full Name</string>
    <string name="social_confirm_password">Confirm password</string>
    <string name="pd_txt_cancel">Cancel</string>
    <string name="pd_email_address">Email Address</string>
    <string name="pd_title_question">Question</string>
    <string name="pd_title_ans_question">Answer options</string>
    <string name="pd_create_question">Create</string>
    <string name="pd_ask_question">Ask a question</string>
    <string name="pd_hint_option">You can add 6 more options</string>
    <string name="theme1_lbl_sign_up">Sign Up</string>
    <string name="theme1_lbl_sign_in">Sign In</string>
    <string name="theme1_lbl_reset">Reset Password</string>
    <string name="theme1_hint_password">Password</string>
    <string name="theme1_forgot_password">Forgot Password</string>
    <string name="theme1_lbl_have_account">Already have an account?</string>
</resources>