<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pd_title_question"
            android:textColor="@color/social_colorPrimary"
            android:textSize="@dimen/pd_font_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/social_transparent"
            android:text="@string/pd_create_question"
            android:textColor="@color/social_colorPrimary"
            android:textSize="@dimen/pd_font_size_medium" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@color/social_transparent"
        android:ellipsize="end"
        android:hint="@string/pd_ask_question"
        android:inputType="text"
        android:maxLines="1"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp"
        android:background="@color/colorGrey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:text="@string/pd_title_ans_question"
        android:textColor="@color/social_colorPrimary"
        android:textSize="@dimen/pd_font_size_medium"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:nextFocusDown="@+id/rvOptions" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/colorGrey"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/pd_hint_option"
        android:textColor="@color/social_dark_gray"
        android:textSize="@dimen/pd_font_size_medium" />

</LinearLayout>