<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:layout_marginTop="@dimen/Social_spacing_standard"
    android:layout_marginBottom="@dimen/_12sdp"
    android:layout_marginStart="@dimen/_12sdp"
    android:layout_marginEnd="@dimen/_12sdp"
    android:gravity="center_vertical"
    android:background="@drawable/social_bg_shadow"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvTab1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/social_lbl_chats"
        android:textAppearance="@style/SocialFontMedium"
        android:textColor="@color/social_textColorPrimary"
        android:textSize="@dimen/Social_font_size_medium" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/social_view_color" />

    <TextView
        android:id="@+id/tvTab2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/social_lbl_status"
        android:textAppearance="@style/SocialFontMedium"
        android:textColor="@color/social_textColorSecondary"
        android:textSize="@dimen/Social_font_size_normal" />
    <View
        android:layout_width="0.5dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/social_view_color" />
    <TextView
        android:id="@+id/tvTab3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/social_lbl_calls"
        android:textAppearance="@style/SocialFontMedium"
        android:textColor="@color/social_textColorSecondary"
        android:textSize="@dimen/Social_font_size_normal" />
</LinearLayout>